  Grimm
- Search timers now have a new action "Announce and switch". This announces the
  event via OSD right before it starts and lets you switch to its channel with 'Ok'.
  Switch timers now have the same option.
- in addition to the announcements via OSD new events can now also be reported by mail.
  To do so, there's a new search timer action "Announce by mail". You also have to update 
  your mail template file epgsearchupdmail.templ (s. the updated sample in the conf directory 
  and/or read the MANUAL '13. Email notification').
- The time in hours between the search timer mails can now be configured in the 
  setup to avoid flooding your inbox. epgsearch buffers the contents of the pending mails
  in the new file pendingnotifications.conf.
- new internal variables:
  * %day%, %month% and %year% which return the numeric day, month and year
    (with century) of an event
  * %chgrp% returns the VDR channel group name corresponding to an event    
  * %liveeventid% returns the encoded event ID as used in the frontend 'live' to add
    direct links e.g. in the search timer mails (see sample conf/epgsearchupdmail-html.templ).
  * %timer.liveid% returns the encoded timer ID as used in the frontend 'live' to add
    direct links e.g. in the search timer mails.
- in memory to pat: french translation update, thanks to Patrice Staudt
- italian translation update, thanks to Diego Pierotto
- finnish translation update, thanks to Rolf Ahrenberg and Ville Skyttä
- new SVDRP command 'MENU [NOW|PRG|SUM]' to call one of the main OSD menus or 
  the summary of the current event. If any epgsearch menu is open a subsequent
  SVDRP call will close it again.
- changed the maximum number of days for a timer conflict check from 99 to 14
- patch by Jörg Wendel for new graphtft patch
- Two events with both empty episode names are now handled different within the 
  feature 'Avoid repeats'. This will result in more recordings, but ensures not to 