@@ -51,6 +51,7 @@ class cUserVar : public cListObject {
     string EvaluateCondExpr(const cEvent* e, bool escapeStrings = false);
     string EvaluateCompExpr(const cEvent* e, bool escapeStrings = false);
     string EvaluateShellCmd(const cEvent* e);
+    string EvaluateConnectCmd(const cEvent* e);
 public:
     cUserVar();
     cVarParser varparser;
@@ -66,6 +67,7 @@ public:
     virtual string Name() { return varparser.varName; }
     virtual bool IsCondExpr() { return varparser.IsCondExpr(); }
     virtual bool IsShellCmd() { return varparser.IsShellCmd(); }
+    virtual bool IsConnectCmd() { return varparser.IsConnectCmd(); }
     bool DependsOnVar(const string& varName);
     bool DependsOnVar(cUserVar* var);
     bool AddDepVar(cUserVar* var);
